<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white3"
    tools:context=".activity.ChangePhoneNumActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout0"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_back_icon_change_phoneNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_icon" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@color/white3"
            android:fontFamily="@font/din_medium"
            android:gravity="center"
            android:text="@string/title_change_phoneNum"
            android:textColor="@color/red1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/din_regular"
        android:text="@string/description_change_phoneNum"
        android:textColor="@color/black2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/phone_num1_change_phoneNum"
        app:layout_constraintStart_toStartOf="@+id/phone_num1_change_phoneNum"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout0" />

    <EditText
        android:id="@+id/phone_num1_change_phoneNum"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/item_edit_text"
        android:ems="10"
        android:fontFamily="@font/din_regular"
        android:hint="@string/hint1_change_phoneNum"
        android:inputType="phone"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/phone_num2_change_phoneNum"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/item_edit_text"
        android:ems="10"
        android:fontFamily="@font/din_regular"
        android:hint="@string/hint2_change_phoneNum"
        android:inputType="phone"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_num1_change_phoneNum" />


    <Button
        android:id="@+id/confirm_btn_change_phoneNum"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/item_button_red"
        android:fontFamily="@font/din_medium"
        android:text="@string/btn_change_phoneNum"
        android:textColor="@color/white2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_num2_change_phoneNum" />

</androidx.constraintlayout.widget.ConstraintLayout>